# web_wallet

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: __init__.py
api/v1/: __init__.py  wallet.py
core/: config.py  database.py  main.py
core/models/: __init__.py  base.py  wallet.py
core/schemas/: __init__.py  wallet.py
migrations/: env.py
migrations/versions/: 2024_10_04_1029-457daaee2f21_create_wallets_table.py
tests/: conftest.py  test_main.py
